Done changes in AlbumFragment, ArtistFragment and PlaylistFragment, to pass the list of songs to ReproductorFragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="home">home</string>
     <string name="your_library">your library</string>
     <string name="textNewList">Give your playlist a name</string>
+    <string name="songs">songs</string>
 </resources>
